--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         body{
             font-family: 'ABeeZee', sans-serif;
-            color: ##0374EE;
+            color: #007bff;
         }
 
         #more,#more2,#more3{
