--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         }
 
         #rb{
-            background-color: #58a6ff;
+            background-color: #007bff;
             position: sticky;
              top: 0;
              overflow-y: auto;
@@ -76,7 +76,7 @@
           <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="https://media.istockphoto.com/photos/cyber-security-digital-crime-concept-picture-id1279388417?b=1&k=20&m=1279388417&s=170667a&w=0&h=hH36cMKiwoAtWjSP1sPheirTpsGr9v-0xuv6lfkk1jo=">
           <div class="text-center lg:w-2/3 w-full">
             <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">WHAT IS CYBER ETHICS ?</h1>
-            <p class="leading-relaxed mb-8"><font color="#93CAED"> Cyber ethics is the philosophic study of ethics pertaining to computers, encompassing user behavior and what computers are programmed to do, and how this affects individuals and society. For years, various governments have enacted regulations while organizations have defined policies about cyberethics.</font></p>
+            <p class="leading-relaxed mb-8"><font color="#007bff"> Cyber ethics is the philosophic study of ethics pertaining to computers, encompassing user behavior and what computers are programmed to do, and how this affects individuals and society. For years, various governments have enacted regulations while organizations have defined policies about cyberethics.</font></p>
            
           </div>
         </div>
@@ -339,7 +339,7 @@
             </svg>
             <span class="ml-3 text-xl">CYBERTRON</span>
           </a>
-          <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2021 Cybertron —
+          <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2022 Cybertron —
             <a href="https://twitter.com/knyttneve" class="text-gray-500 ml-1" target="_blank" rel="noopener noreferrer">@a-nimus</a>
           </p>
           <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
