--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
               </div>
               <div class="p-2 w-full pt-8 mt-8 border-t border-gray-800 text-center">
                 <a class="text-indigo-400">a-nimus@nowhere.com</a>
-                <p class="leading-normal my-5">Civil Lines
-                  <br>Unnao-209801, UP
+                <p class="leading-normal my-5">THE HOME
+                  <br>Planet C-35, Milky Way
                 </p>
                 <span class="inline-flex">
                   <a class="text-gray-500">
