--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 ">
     <meta property="og:description"
         content="Cyberethics is a branch of applied ethics that examines moral, legal, and social issues at the intersection of computer/information and communication technologies.">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://dl.dropbox.com/s/9hwtotkx09ziorf/cyicon%20-%20Copy.jpg?dl=0">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -35,7 +35,7 @@
 ">
     <meta property="twitter:description"
         content="Cyberethics is a branch of applied ethics that examines moral, legal, and social issues at the intersection of computer/information and communication technologies.">
-    <meta property="twitter:image" content="">
+    <meta property="twitter:image" content="https://dl.dropbox.com/s/9hwtotkx09ziorf/cyicon%20-%20Copy.jpg?dl=0">
     <title>CYBERTRON</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
